// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertAjvErrors() all fields defined converts properly 1`] = `
Array [
  Object {
    "code": "required",
    "message": "Request parameter a.b c is required",
    "path": Array [
      "a",
      "b",
    ],
    "severity": 0,
  },
]
`;

exports[`convertAjvErrors() keyword field is missing converts properly 1`] = `
Array [
  Object {
    "code": "",
    "message": "Request parameter a.b c is required",
    "path": Array [
      "a",
      "b",
    ],
    "severity": 0,
  },
]
`;
